# Fss-Mini-Rag

./: .flake8  .gitignore  ENHANCEMENTS.md  FSS_ENHANCED_QWENCODE_EVALUATION_REPORT.md  GET_STARTED.md  IMPLEMENTATION_COMPLETE.md  INSTALL_SIMPLE.sh  LICENSE  Makefile  PR_BODY.md  PR_DRAFT.md  PYPI_LAUNCH_PLAN.md  README.md  asciinema_to_gif.py  cleanup_claude_references.py  commit_message.txt  config-llm-providers.yaml  create_demo_gifs.sh  create_demo_script.py  create_exploration_demo.py  create_synthesis_demo.py  fss-mini-rag-prompts.md  fss-mini-rag.desktop  install.ps1  install.sh  install_mini_rag.ps1  install_mini_rag.sh  install_windows.bat  pyproject.toml  pytest.ini  rag-mini  rag-mini-enhanced  rag-mini.py  rag-tui  rag-tui.py  record_demo.sh  requirements-full.txt  requirements.txt  run_mini_rag.sh  test_fixes.py
.archive/deprecated-tui/: rag-tui  rag-tui.py  rag.bat
.archive/planning-docs/: PLAN-web-scraper.md
.github/workflows/: build-and-release.yml  ci.yml  release.yml  template-sync.yml
.mini-rag/: config.yaml
.venv-linting/: pyvenv.cfg
assets/: README_icon_placeholder.md  tts_onboarding.txt
claude_rag/: __main__.py  auto_optimizer.py  chunker.py  cli.py  config.py  explorer.py  fast_server.py  indexer.py  llm_synthesizer.py  ollama_embeddings.py  path_handler.py  performance.py  query_expander.py  search.py  server.py  smart_chunking.py  windows_console_fix.py
docs/: AGENT_INSTRUCTIONS.md  BEGINNER_GLOSSARY.md  CHUNKER_EVAL_ISSUES.md  CPU_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DIAGRAMS.md  FALLBACK_SETUP.md  GETTING_STARTED.md  GUI_GUIDE.md  HYBRID_SEARCH_ALGORITHM.md  LLM_PROVIDERS.md  PLAN-web-scraper.md  PRUNING_AND_ORGANISATION.md  QUERY_EXPANSION.md  SMART_TUNING_GUIDE.md  TECHNICAL_GUIDE.md  TESTING_SUMMARY.md  TROUBLESHOOTING.md  TUI_GUIDE.md  WEB_SEARCH_AND_RESEARCH.md  fss-mini-rag-project-story.md  project-structure-analysis.md  security-analysis.md
examples/: analyze_dependencies.py  basic_usage.py  config-beginner.yaml  config-fast.yaml  config-llm-providers.yaml  config-quality.yaml  config.yaml  smart_config_suggestions.py
mini_rag/: __init__.py  __main__.py  auto_optimizer.py  chunker.py  cli.py  config.py  deep_research.py  explorer.py  extractors.py  fast_server.py  gui.py  indexer.py  llm_safeguards.py  llm_synthesizer.py  non_invasive_watcher.py  ollama_embeddings.py  path_handler.py  query_expander.py  rate_limiter.py  scrape_registry.py  search.py  search_engines.py  server.py  smart_chunking.py  system_context.py  updater.py  venv_checker.py  watcher.py  web_scraper.py  windows_console_fix.py
mini_rag/gui/: __init__.py  __main__.py  app.py  config_store.py  cost_tracker.py  env_manager.py  events.py  state.py  theme.py  tooltip.py
mini_rag/gui/components/: collection_panel.py  content_panel.py  empty_state.py  loading_overlay.py  rendered_markdown.py  research_tab.py  results_table.py  search_bar.py  status_bar.py
mini_rag/gui/dialogs/: about.py  help_overlay.py  preferences.py  scrape_tracker.py  welcome.py
mini_rag/gui/services/: indexing.py  model_discovery.py  research.py  search.py  streaming.py
packaging/: README.md
packaging/linux/: AppRun  README.md  build-appimage.sh  build-deb.sh  fss-mini-rag.desktop  postinstall.sh
packaging/macos/: README.md
packaging/windows/: README.md  build-installer.ps1  installer.iss
recordings/: fss-mini-rag-demo-20250812_154754.cast  fss-mini-rag-demo-20250812_160725.cast  fss-mini-rag-demo-20250812_161410.cast
reports/: comprehensive-synthesis-analysis.md  emma-beginner-analysis.md  michael-expert-analysis.md
scripts/: analyze_github_actions.py  build_pyz.py  final_pre_push_validation.py  phase1_basic_tests.py  phase1_container_tests.py  phase1_local_validation.py  phase2_build_tests.py  quick-github-setup.sh  run_all_env_tests.py  setup-github-template.py  setup_test_environments.py  simple_test.py  test-configs.py  test_distribution.py  validate_setup.py  verify_launch_readiness.py
templates/: README.md
templates/github-actions/: python-package-workflow.yml
templates/installers/: install-template.ps1  install-template.sh
templates/python-packaging/: pyproject-template.toml
tests/: 01_basic_integration_test.py  02_search_examples.py  03_system_validation.py  conftest.py  show_index_contents.py  test_chunker.py  test_cli_integration.py  test_command_help_systems.py  test_config.py  test_context_expansion.py  test_context_retrieval.py  test_db_robustness.py  test_end_to_end.py  test_extractors.py  test_fixes.py  test_gui_integration.py  test_gui_state.py  test_gui_widgets.py  test_hybrid_search.py  test_llm_synthesizer.py  test_min_chunk_size.py  test_mode_separation.py  test_ollama_integration.py  test_rag_integration.py  test_scrape_registry.py  test_search.py  test_search_engines.py  test_smart_ranking.py  test_web_scraper.py  troubleshoot.py
tests/corpus/config/: app_settings.toml  database_config.yaml
tests/corpus/docs/: CPU_DEPLOYMENT.md  DEPLOYMENT_ROADMAP.md  FALLBACK_SETUP.md  GITHUB_ACTIONS_ANALYSIS.md  LLM_PROVIDERS.md  PYPI_PUBLICATION_GUIDE.md  PYTHON_PACKAGING_BEST_PRACTICES.md  TECHNICAL_GUIDE.md  TESTING_PLAN.md
tests/corpus/javascript/: api_router.js
tests/corpus/markdown/: api_documentation.md  compliance_manual.md
tests/corpus/python/: inventory_manager.py  payment_processor.py
tests/corpus/real_code/: __init__.py  __main__.py  auto_optimizer.py  chunker.py  config.py  indexer.py  llm_synthesizer.py  ollama_embeddings.py  (+6 more)
working-documents/: 03_system_validation.py  LAUNCH_CHECKLIST.txt  TESTING_RESULTS.md  ab_compare.py  show_index_contents.py  test_min_chunk_size.py
(+1 files in other folders)
