[tool.isort]
profile = "black"
line_length = 95
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["mini_rag", "tests", "examples", "scripts"]
known_first_party = ["mini_rag"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = [".venv", ".venv-linting", "__pycache__", ".git"]
skip_glob = ["*.egg-info/*", "build/*", "dist/*"]

[tool.black]
line-length = 95
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.venv-linting
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fss-mini-rag"
version = "2.1.0"
description = "Educational RAG system that actually works! Two modes: fast synthesis for quick answers, deep exploration for learning."
authors = [
    {name = "Brett Fox", email = "brett@foxsoftwaresolutions.com.au"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "lancedb>=0.5.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "watchdog>=3.0.0",
    "requests>=2.28.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "PyYAML>=6.0.0",
    "rank-bm25>=0.2.2",
    "psutil>=5.9.0",
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.23.0",
    "duckduckgo-search>=4.0.0",
]

keywords = ["rag", "search", "ai", "llm", "embeddings", "semantic-search", "code-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]

[project.urls]
Homepage = "https://github.com/FSSCoding/Fss-Mini-Rag"
Repository = "https://github.com/FSSCoding/Fss-Mini-Rag"
Issues = "https://github.com/FSSCoding/Fss-Mini-Rag/issues"

[project.scripts]
rag-mini = "mini_rag.cli:cli"
rag-mini-gui = "mini_rag.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mini_rag*"]